--- a/chat-api/build.gradle
+++ b/chat-api/build.gradle
@@ -32,6 +32,7 @@ ext {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
+	compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
 	compile('org.codehaus.groovy:groovy')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
